--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
 
     Acme::CPANAuthors::French - We are French CPAN authors
-                                Nous sommes des auteurs CPAN français
+                                Nous sommes des auteurs CPAN francophones
 
 
 DESCRIPTION
