Importing sources from Acme-CPANAuthors-French v0.05

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-CPANAuthors-French
 
+0.05    2008.09.22  (SAPER)
+        [AUTHORS] Removed INGRIF.
+
 0.04    2008.09.21  (SAPER)
         [AUTHORS] Added MJONDET.
         [EG] Added two examples scripts.
