Importing sources from Acme-CPANAuthors-French v0.06

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-CPANAuthors-French
 
+0.06    2008.10.29  (SAPER)
+        [AUTHORS] Added BRIAC, ECOCODE, GROMMIER, PIXEL, SDP, YBLUSSEAU.
+
 0.05    2008.09.22  (SAPER)
         [AUTHORS] Removed INGRIF.
 
