--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Acme-CPANAuthors-French
 
+0.07    2008.11.02  (SAPER)
+        [TESTS] Modified t/10-synopsis.t so it skip the tests which may
+        fail if the CPAN configuration is not available.
+
 0.06    2008.10.29  (SAPER)
         [AUTHORS] Added BRIAC, ECOCODE, GROMMIER, PIXEL, SDP, YBLUSSEAU.
 
