--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Acme-CPANAuthors-French
 
+0.08    2009.xx.xx  (SAPER)
+        [BUGFIX] CPAN-RT #45077: Specify utf8 encoding in the module and add
+        a test (t/80-cpan-rt-45077.t) to check this (Olivier Mengue).
+
 0.07    2008.11.02  (SAPER)
         [TESTS] Modified t/10-synopsis.t so it skip the tests which may
         fail if the CPAN configuration is not available.
