--- a/Changes
+++ b/Changes
@@ -3,6 +3,15 @@ Revision history for Acme-CPANAuthors-French
 0.08    2009.xx.xx  (SAPER)
         [BUGFIX] CPAN-RT #45077: Specify utf8 encoding in the module and add
         a test (t/80-cpan-rt-45077.t) to check this (Olivier Mengue).
+        [AUTHORS] Added ALAMAZ, BOUBAKER, CASTOR, CFILIPPE, CGUINE, CYK,
+        CYPLP, DAUNAY, DDUMONT, DOUMBZH, DRAUONER, EGERMAN, ELLIPSE, FBRIERE,
+        FIGANIM, FMC, FPORCHER, FRACOLO, FRANCKC, FRETT, GUIMARD, GUYDX,
+        JACQUELIN, JBNIVOIT, JETEVE, JGL, JHIVER, JMFAYARD, JMPENNEL,
+        JMVILOMET, JPDURRIOS, JPVIDAL, JUCROUZET, KAFKA, KERMAGO, KORSANI,
+        KRISSG, LEUCOS, LSIM, LWA, MHALLGREN, MOUNS, NMONNET, NTHIERY, OARCHER,
+        OLIBOU, ORTALO, OSALAUN, PVERD, RAF, RAFAEL, RCHIBOIS, RECKON,
+        RENNERT, ROSSI, ROUGE, SCOLINET, SEBDIAZ, SMAXIME, SNCK, STHEBERT,
+        STOUGARD, TCHINCHOW, YANN, YVESAGO, ZERODEUX.
 
 0.07    2008.11.02  (SAPER)
         [TESTS] Modified t/10-synopsis.t so it skip the tests which may
