--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-CPANAuthors-French
 
+0.09    2009.07.xx  (SAPER)
+        [AUTHORS] Added BCO.
+
 0.08    2009.06.29  (SAPER)
         [BUGFIX] CPAN-RT #45077: Specify utf8 encoding in the module and add
         a test (t/80-cpan-rt-45077.t) to check this (Olivier Mengue).
