--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Acme-CPANAuthors-French
 
-0.09    2009.07.xx  (SAPER)
-        [AUTHORS] Added BCO.
+0.09    2010.11.xx  (SAPER)
+        [AUTHORS] Added BCO, HOBBESTIG.
 
 0.08    2009.06.29  (SAPER)
         [BUGFIX] CPAN-RT #45077: Specify utf8 encoding in the module and add
