Set release date.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Acme-CPANAuthors-French
 
-0.09    2010.11.xx  (SAPER)
+0.09    2010.11.09  (SAPER)
         [AUTHORS] Added BCO, HOBBESTIG.
 
 0.08    2009.06.29  (SAPER)
